--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Alphabet">
-        <activity android:name=".StudyActivity"></activity>
+        <activity android:name=".TestDesignActivity"></activity>
+        <activity android:name=".ExerciseActivityNew" />
+        <activity android:name=".StudyActivity" />
         <activity
             android:name=".AboutActivity"
             android:parentActivityName=".MainActivity" />
