--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Alphabet">
-        <activity android:name=".ResultsActivity"></activity>
+        <activity android:name=".AboutActivityContraint"></activity>
+        <activity android:name=".ResultsActivity" />
         <activity android:name=".ExerciseActivityNew" />
         <activity android:name=".StudyActivity" />
-        <activity
-            android:name=".AboutActivity"
-            android:parentActivityName=".MainActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
