--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Alphabet">
-        <activity android:name=".AboutActivityContraint"></activity>
+        <activity android:name=".AnimationActivity"></activity>
+        <activity android:name=".AboutActivityContraint" />
         <activity android:name=".ResultsActivity" />
         <activity android:name=".ExerciseActivityNew" />
         <activity android:name=".StudyActivity" />
